<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/padding_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_menu_name"
                style="@style/TextViewHeader"
                android:layout_marginBottom="@dimen/padding_area"
                android:text="@string/text_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextViewSubject"
                android:text="@string/text_register_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_name"
                style="@style/EditTextStyle"
                android:hint="@string/text_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                style="@style/TextViewSubject"
                android:text="@string/text_register_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_email"
                style="@style/EditTextStyle"
                android:hint="@string/text_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                style="@style/TextViewSubject"
                android:text="@string/text_register_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_tel"
                style="@style/EditTextStyle"
                android:hint="@string/text_register_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                style="@style/TextViewSubject"
                android:text="@string/text_register_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_sex"
                android:focusable="false"
                android:focusableInTouchMode="false"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                style="@style/TextViewSubject"
                android:text="@string/text_register_education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_education"
                android:focusable="false"
                android:focusableInTouchMode="false"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                style="@style/TextViewSubject"
                android:text="@string/text_register_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_company"

                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                style="@style/TextViewSubject"
                android:text="@string/text_register_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_income"
                android:focusable="false"
                android:focusableInTouchMode="false"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:padding="7dp"
                android:background="@drawable/bg_round_nev"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <com.gpk.thansettakij.view.TextViews
                    android:id="@+id/tv_confirm"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/text_register_confirm"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>
